--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Hello JS</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/style.min.css" />
 </head>
 <body>
 <div id="myDiv">
@@ -11,6 +11,6 @@
 </div>
   <!--<button id="myButton" class="" name="myName">Some Action</button>-->
   <!--<p class="myClass">This is a span 1</p>-->
-<script src="js/playground-ts.js"></script>
+<script src="js/playground-ts.min.js"></script>
 </body>
 </html>
