--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 </div>
   <!--<button id="myButton" class="" name="myName">Some Action</button>-->
   <!--<p class="myClass">This is a span 1</p>-->
-<script src="js/playground-ts.min.js"></script>
+<script src="js/helloTypeScript.min.js"></script>
 </body>
 </html>
