--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Hello JS</title>
-  <link rel="stylesheet" href="css/style.min.css" />
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body>
 <div id="myDiv">
@@ -11,6 +13,12 @@
 </div>
   <!--<button id="myButton" class="" name="myName">Some Action</button>-->
   <!--<p class="myClass">This is a span 1</p>-->
-<script src="js/helloTypeScript.min.js"></script>
+  <!--<object type="application/pdf"-->
+        <!--data="/img/01_Phrases_That_Signal_Your_Client_Wants_You_to_Work_for_Free.pdf"-->
+        <!--width="400"-->
+        <!--height="200">-->
+  <!--</object>-->
+
+<script src="js/helloTypeScript.js"></script>
 </body>
 </html>
