Add .map files.

--- a/index.html
+++ b/index.html
@@ -9,16 +9,15 @@
 </head>
 <body>
 <div id="myDiv">
-  <h2 id="myId" class="myClass" style="">Hello JavaScript!</h2>
+  <h2 id="myId" class="myClass" style="">Func <span>Programming!</span></h2>
 </div>
   <!--<button id="myButton" class="" name="myName">Some Action</button>-->
   <!--<p class="myClass">This is a span 1</p>-->
   <!--<object type="application/pdf"-->
-        <!--data="/img/01_Phrases_That_Signal_Your_Client_Wants_You_to_Work_for_Free.pdf"-->
-        <!--width="400"-->
-        <!--height="200">-->
+    <!--data="/img/01_Phrases_That_Signal_Your_Client_Wants_You_to_Work_for_Free.pdf"-->
+    <!--width="400"-->
+    <!--height="200">-->
   <!--</object>-->
-
-<script src="js/helloTypeScript.js"></script>
+<script src="js/functional.js"></script>
 </body>
 </html>
