--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
     <!--width="400"-->
     <!--height="200">-->
   <!--</object>-->
-<script src="js/functional.js"></script>
+<script src="js/playground.js"></script>
 </body>
 </html>
