--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Hello JS</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <title>Hello JavaScript</title>
+  <link rel="stylesheet" href="static/css/style.css" />
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body>
 <div id="myDiv">
-  <h2 id="myId" class="myClass" style="">Func <span>Programming!</span></h2>
+  <h2 id="myId" class="myClass" style="">You Don't Know <span>&nbsp;JavaScript!</span></h2>
 </div>
   <!--<button id="myButton" class="" name="myName">Some Action</button>-->
   <!--<p class="myClass">This is a span 1</p>-->
@@ -18,6 +18,6 @@
     <!--width="400"-->
     <!--height="200">-->
   <!--</object>-->
-<script src="js/playground.js"></script>
+<script src="js/youDontKnowJS.js"></script>
 </body>
 </html>
