--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div id="myDiv">
-  <h2 id="myId" class="myClass" style="">You Don't Know <span>JavaScript!</span></h2>
+  <h2 id="myId" class="header" style="">You Don't Know <span>JavaScript!</span></h2>
 </div>
   <!--<button id="myButton" class="" name="myName">Some Action</button>-->
   <!--<p class="myClass">This is a span 1</p>-->
@@ -18,6 +18,6 @@
     <!--width="400"-->
     <!--height="200">-->
   <!--</object>-->
-<script src="js/youDontKnowJS.js"></script>
+<script src="js/playground.js"></script>
 </body>
 </html>
