Fix gulpfile.js to work with gulp 3.9.1

--- a/source/index.html
+++ b/source/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div id="myDiv">
-      <h5 id="myId" class="header">I &nbsp;❤️ JavaScript</h5>
+      <h5 id="myId" class="header">I &nbsp;❤️ JavaScripts</h5>
     </div>
     <form class="w-75">
       <div class="form-group">
@@ -24,6 +24,7 @@
         <div class="valid-feedback">Looks good!</div>
         <div class="invalid-feedback">Invalid name</div>
       </div>
+
       <div class="form-group">
         <input class="form-control" type="number" name="phone" placeholder="Phone" />
         <div class="valid-feedback">Looks good!</div>
